manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-svc
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: hello-world
